xml/XMLParser.js
// This file was generated on Tue Mar 12, 2013 05:48 (UTC+01) by REx v5.24 which is Copyright (c) 1979-2013 by Gunther Rademacher <grd@gmx.net>
// REx command line: XMLParser.ebnf -tree -javascript -a xqlint

                                                            // line 2 "XMLParser.ebnf"
                                                            /* ***** BEGIN LICENSE BLOCK *****
                                                             * Distributed under the BSD license:
                                                             *
                                                             * Copyright (c) 2010, Ajax.org B.V.
                                                             * All rights reserved.
                                                             *
                                                             * Redistribution and use in source and binary forms, with or without
                                                             * modification, are permitted provided that the following conditions are met:
                                                             *     * Redistributions of source code must retain the above copyright
                                                             *       notice, this list of conditions and the following disclaimer.
                                                             *     * Redistributions in binary form must reproduce the above copyright
                                                             *       notice, this list of conditions and the following disclaimer in the
                                                             *       documentation and/or other materials provided with the distribution.
                                                             *     * Neither the name of Ajax.org B.V. nor the
                                                             *       names of its contributors may be used to endorse or promote products
                                                             *       derived from this software without specific prior written permission.
                                                             *
                                                             * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
                                                             * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
                                                             * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
                                                             * DISCLAIMED. IN NO EVENT SHALL AJAX.ORG B.V. BE LIABLE FOR ANY
                                                             * DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
                                                             * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
                                                             * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
                                                             * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
                                                             * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
                                                             * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
                                                             *
                                                             * ***** END LICENSE BLOCK ***** */

                                                            define(function(require, exports, module){
                                                            var XMLParser = exports.XMLParser = function XMLParser(string, parsingEventHandler)
                                                            {
                                                              init(string, parsingEventHandler);
                                                            // line 40 "XMLParser.js"
  var self = this;

  this.ParseException = function(b, e, s, o, x)
  {
    var
      begin = b,
      end = e,
      state = s,
      offending = o,
      expected = x;

    this.getBegin = function() {return begin;};
    this.getEnd = function() {return end;};
    this.getState = function() {return state;};
    this.getExpected = function() {return expected;};
    this.getOffending = function() {return offending;};

    this.getMessage = function()
    {
      return offending < 0 ? "lexical analysis failed" : "syntax error";
    };
  };

  function init(string, parsingEventHandler)
  {
    eventHandler = parsingEventHandler;
    input = string;
    size = string.length;
    reset(0, 0, 0);
  }

  this.getInput = function()
  {
    return input;
  };

  function reset(l, b, e)
  {
            b0 = b; e0 = b;
    l1 = l; b1 = b; e1 = e;
    l2 = 0;
    l3 = 0;
    end = e;
    eventHandler.reset(input);
  }

  this.getOffendingToken = function(e)
  {
    var o = e.getOffending();
    return o >= 0 ? XMLParser.TOKEN[o] : null;
  };

  this.getExpectedTokenSet = function(e)
  {
    var expected;
    if (e.getExpected() < 0)
    {
      expected = XMLParser.getTokenSet(- e.getState());
    }
    else
    {
      expected = [XMLParser.TOKEN[e.getExpected()]];
    }
    return expected;
  };

  this.getErrorMessage = function(e)
  {
    var tokenSet = this.getExpectedTokenSet(e);
    var found = this.getOffendingToken(e);
    var prefix = input.substring(0, e.getBegin());
    var lines = prefix.split("\n");
    var line = lines.length;
    var column = lines[line - 1].length + 1;
    var size = e.getEnd() - e.getBegin();
    return e.getMessage()
         + (found == null ? "" : ", found " + found)
         + "\nwhile expecting "
         + (tokenSet.length == 1 ? tokenSet[0] : ("[" + tokenSet.join(", ") + "]"))
         + "\n"
         + (size == 0 || found != null ? "" : "after successfully scanning " + size + " characters beginning ")
         + "at line " + line + ", column " + column + ":\n..."
         + input.substring(e.getBegin(), Math.min(input.length, e.getBegin() + 64))
         + "...";
  };

  this.parse_document = function()
  {
    eventHandler.startNonterminal("document", e0);
    parse_prolog();
    parse_element();
    for (;;)
    {
      lookahead1(56);               // EOF | S | Comment | PI
      if (l1 == 1)                  // EOF
      {
        break;
      }
      parse_Misc();
    }
    shift(1);                       // EOF
    eventHandler.endNonterminal("document", e0);
  };

  function parse_prolog()
  {
    eventHandler.startNonterminal("prolog", e0);
    lookahead1(66);                 // S | Comment | PI | '<' | '<!DOCTYPE' | '<?xml'
    if (l1 == 40)                   // '<?xml'
    {
      parse_XMLDecl();
    }
    for (;;)
    {
      lookahead1(64);               // S | Comment | PI | '<' | '<!DOCTYPE'
      if (l1 == 33                  // '<'
       || l1 == 35)                 // '<!DOCTYPE'
      {
        break;
      }
      parse_Misc();
    }
    if (l1 == 35)                   // '<!DOCTYPE'
    {
      parse_doctypedecl();
      for (;;)
      {
        lookahead1(59);             // S | Comment | PI | '<'
        if (l1 == 33)               // '<'
        {
          break;
        }
        parse_Misc();
      }
    }
    eventHandler.endNonterminal("prolog", e0);
  }

  function parse_XMLDecl()
  {
    eventHandler.startNonterminal("XMLDecl", e0);
    shift(40);                      // '<?xml'
    parse_VersionInfo();
    lookahead1(28);                 // S | '?>'
    switch (l1)
    {
    case 2:                         // S
      lookahead2(55);               // '?>' | 'encoding' | 'standalone'
      break;
    default:
      lk = l1;
    }
    if (lk == 7810)                 // S 'encoding'
    {
      parse_EncodingDecl();
    }
    lookahead1(28);                 // S | '?>'
    switch (l1)
    {
    case 2:                         // S
      lookahead2(40);               // '?>' | 'standalone'
      break;
    default:
      lk = l1;
    }
    if (lk == 8066)                 // S 'standalone'
    {
      parse_SDDecl();
    }
    lookahead1(28);                 // S | '?>'
    if (l1 == 2)                    // S
    {
      shift(2);                     // S
    }
    lookahead1(17);                 // '?>'
    shift(44);                      // '?>'
    eventHandler.endNonterminal("XMLDecl", e0);
  }

  function parse_VersionInfo()
  {
    eventHandler.startNonterminal("VersionInfo", e0);
    lookahead1(0);                  // S
    shift(2);                       // S
    lookahead1(21);                 // 'version'
    shift(64);                      // 'version'
    parse_Eq();
    lookahead1(33);                 // '"' | "'"
    switch (l1)
    {
    case 24:                        // "'"
      shift(24);                    // "'"
      lookahead1(6);                // VersionNum
      shift(13);                    // VersionNum
      lookahead1(11);               // "'"
      shift(24);                    // "'"
      break;
    default:
      shift(17);                    // '"'
      lookahead1(6);                // VersionNum
      shift(13);                    // VersionNum
      lookahead1(8);                // '"'
      shift(17);                    // '"'
    }
    eventHandler.endNonterminal("VersionInfo", e0);
  }

  function parse_Eq()
  {
    eventHandler.startNonterminal("Eq", e0);
    lookahead1(26);                 // S | '='
    if (l1 == 2)                    // S
    {
      shift(2);                     // S
    }
    lookahead1(15);                 // '='
    shift(41);                      // '='
    lookahead1(58);                 // S | AttValue | '"' | "'"
    if (l1 == 2)                    // S
    {
      shift(2);                     // S
    }
    eventHandler.endNonterminal("Eq", e0);
  }

  function parse_Misc()
  {
    eventHandler.startNonterminal("Misc", e0);
    switch (l1)
    {
    case 10:                        // Comment
      shift(10);                    // Comment
      break;
    case 11:                        // PI
      shift(11);                    // PI
      break;
    default:
      shift(2);                     // S
    }
    eventHandler.endNonterminal("Misc", e0);
  }

  function parse_doctypedecl()
  {
    eventHandler.startNonterminal("doctypedecl", e0);
    shift(35);                      // '<!DOCTYPE'
    lookahead1(0);                  // S
    shift(2);                       // S
    lookahead1(1);                  // Name
    shift(3);                       // Name
    lookahead1(48);                 // S | '>' | '['
    switch (l1)
    {
    case 2:                         // S
      lookahead2(63);               // '>' | 'PUBLIC' | 'SYSTEM' | '['
      break;
    default:
      lk = l1;
    }
    if (lk == 7298                  // S 'PUBLIC'
     || lk == 7426)                 // S 'SYSTEM'
    {
      shift(2);                     // S
      parse_ExternalID();
    }
    lookahead1(48);                 // S | '>' | '['
    if (l1 == 2)                    // S
    {
      shift(2);                     // S
    }
    lookahead1(39);                 // '>' | '['
    if (l1 == 59)                   // '['
    {
      shift(59);                    // '['
      parse_intSubset();
      shift(60);                    // ']'
      lookahead1(27);               // S | '>'
      if (l1 == 2)                  // S
      {
        shift(2);                   // S
      }
    }
    lookahead1(16);                 // '>'
    shift(42);                      // '>'
    eventHandler.endNonterminal("doctypedecl", e0);
  }

  function parse_DeclSep()
  {
    eventHandler.startNonterminal("DeclSep", e0);
    switch (l1)
    {
    case 15:                        // PEReference
      shift(15);                    // PEReference
      break;
    default:
      shift(2);                     // S
    }
    eventHandler.endNonterminal("DeclSep", e0);
  }

  function parse_intSubset()
  {
    eventHandler.startNonterminal("intSubset", e0);
    for (;;)
    {
      lookahead1(70);               // S | Comment | PI | PEReference | '<!ATTLIST' | '<!ELEMENT' | '<!ENTITY' |
                                    // '<!NOTATION' | ']'
      if (l1 == 60)                 // ']'
      {
        break;
      }
      switch (l1)
      {
      case 2:                       // S
      case 15:                      // PEReference
        parse_DeclSep();
        break;
      default:
        parse_markupdecl();
      }
    }
    eventHandler.endNonterminal("intSubset", e0);
  }

  function parse_markupdecl()
  {
    eventHandler.startNonterminal("markupdecl", e0);
    switch (l1)
    {
    case 36:                        // '<!ELEMENT'
      parse_elementdecl();
      break;
    case 34:                        // '<!ATTLIST'
      parse_AttlistDecl();
      break;
    case 37:                        // '<!ENTITY'
      parse_EntityDecl();
      break;
    case 38:                        // '<!NOTATION'
      parse_NotationDecl();
      break;
    case 11:                        // PI
      shift(11);                    // PI
      break;
    default:
      shift(10);                    // Comment
    }
    eventHandler.endNonterminal("markupdecl", e0);
  }

  function parse_SDDecl()
  {
    eventHandler.startNonterminal("SDDecl", e0);
    shift(2);                       // S
    lookahead1(20);                 // 'standalone'
    shift(63);                      // 'standalone'
    parse_Eq();
    lookahead1(33);                 // '"' | "'"
    switch (l1)
    {
    case 24:                        // "'"
      shift(24);                    // "'"
      lookahead1(42);               // 'no' | 'yes'
      switch (l1)
      {
      case 65:                      // 'yes'
        shift(65);                  // 'yes'
        break;
      default:
        shift(62);                  // 'no'
      }
      lookahead1(11);               // "'"
      shift(24);                    // "'"
      break;
    default:
      shift(17);                    // '"'
      lookahead1(42);               // 'no' | 'yes'
      switch (l1)
      {
      case 65:                      // 'yes'
        shift(65);                  // 'yes'
        break;
      default:
        shift(62);                  // 'no'
      }
      lookahead1(8);                // '"'
      shift(17);                    // '"'
    }
    eventHandler.endNonterminal("SDDecl", e0);
  }

  function parse_element()
  {
    eventHandler.startNonterminal("element", e0);
    shift(33);                      // '<'
    lookahead1(1);                  // Name
    shift(3);                       // Name
    for (;;)
    {
      lookahead1(47);               // S | '/>' | '>'
      switch (l1)
      {
      case 2:                       // S
        lookahead2(50);             // Name | '/>' | '>'
        break;
      default:
        lk = l1;
      }
      if (lk != 386)                // S Name
      {
        break;
      }
      shift(2);                     // S
      parse_Attribute();
    }
    if (l1 == 2)                    // S
    {
      shift(2);                     // S
    }
    lookahead1(37);                 // '/>' | '>'
    switch (l1)
    {
    case 31:                        // '/>'
      shift(31);                    // '/>'
      break;
    default:
      shift(42);                    // '>'
      parse_content();
      parse_ETag();
    }
    eventHandler.endNonterminal("element", e0);
  }

  function parse_Attribute()
  {
    eventHandler.startNonterminal("Attribute", e0);
    lookahead1(1);                  // Name
    shift(3);                       // Name
    parse_Eq();
    lookahead1(3);                  // AttValue
    shift(6);                       // AttValue
    eventHandler.endNonterminal("Attribute", e0);
  }

  function parse_ETag()
  {
    eventHandler.startNonterminal("ETag", e0);
    shift(39);                      // '</'
    lookahead1(1);                  // Name
    shift(3);                       // Name
    lookahead1(27);                 // S | '>'
    if (l1 == 2)                    // S
    {
      shift(2);                     // S
    }
    lookahead1(16);                 // '>'
    shift(42);                      // '>'
    eventHandler.endNonterminal("ETag", e0);
  }

  function parse_content()
  {
    eventHandler.startNonterminal("content", e0);
    lookahead1(69);                 // CharData | Comment | PI | CDSect | CharRef | '&' | '<' | '</'
    if (l1 == 9)                    // CharData
    {
      shift(9);                     // CharData
    }
    for (;;)
    {
      lookahead1(68);               // Comment | PI | CDSect | CharRef | '&' | '<' | '</'
      if (l1 == 39)                 // '</'
      {
        break;
      }
      switch (l1)
      {
      case 33:                      // '<'
        parse_element();
        break;
      case 12:                      // CDSect
        shift(12);                  // CDSect
        break;
      case 11:                      // PI
        shift(11);                  // PI
        break;
      case 10:                      // Comment
        shift(10);                  // Comment
        break;
      default:
        parse_Reference();
      }
      lookahead1(69);               // CharData | Comment | PI | CDSect | CharRef | '&' | '<' | '</'
      if (l1 == 9)                  // CharData
      {
        shift(9);                   // CharData
      }
    }
    eventHandler.endNonterminal("content", e0);
  }

  function parse_elementdecl()
  {
    eventHandler.startNonterminal("elementdecl", e0);
    shift(36);                      // '<!ELEMENT'
    lookahead1(0);                  // S
    shift(2);                       // S
    lookahead1(1);                  // Name
    shift(3);                       // Name
    lookahead1(0);                  // S
    shift(2);                       // S
    parse_contentspec();
    lookahead1(27);                 // S | '>'
    if (l1 == 2)                    // S
    {
      shift(2);                     // S
    }
    lookahead1(16);                 // '>'
    shift(42);                      // '>'
    eventHandler.endNonterminal("elementdecl", e0);
  }

  function parse_contentspec()
  {
    eventHandler.startNonterminal("contentspec", e0);
    lookahead1(52);                 // '(' | 'ANY' | 'EMPTY'
    switch (l1)
    {
    case 25:                        // '('
      lookahead2(57);               // S | Name | '#PCDATA' | '('
      switch (lk)
      {
      case 281:                     // '(' S
        lookahead3(49);             // Name | '#PCDATA' | '('
        break;
      }
      break;
    default:
      lk = l1;
    }
    switch (lk)
    {
    case 47:                        // 'EMPTY'
      shift(47);                    // 'EMPTY'
      break;
    case 45:                        // 'ANY'
      shift(45);                    // 'ANY'
      break;
    case 2585:                      // '(' '#PCDATA'
    case 327961:                    // '(' S '#PCDATA'
      parse_Mixed();
      break;
    default:
      parse_children();
    }
    eventHandler.endNonterminal("contentspec", e0);
  }

  function parse_children()
  {
    eventHandler.startNonterminal("children", e0);
    parse_choiceOrSeq();
    lookahead1(65);                 // S | '*' | '+' | '>' | '?'
    if (l1 != 2                     // S
     && l1 != 42)                   // '>'
    {
      switch (l1)
      {
      case 43:                      // '?'
        shift(43);                  // '?'
        break;
      case 28:                      // '*'
        shift(28);                  // '*'
        break;
      default:
        shift(29);                  // '+'
      }
    }
    eventHandler.endNonterminal("children", e0);
  }

  function parse_cp()
  {
    eventHandler.startNonterminal("cp", e0);
    lookahead1(30);                 // Name | '('
    switch (l1)
    {
    case 3:                         // Name
      shift(3);                     // Name
      break;
    default:
      parse_choiceOrSeq();
    }
    lookahead1(67);                 // S | ')' | '*' | '+' | ',' | '?' | '|'
    if (l1 == 28                    // '*'
     || l1 == 29                    // '+'
     || l1 == 43)                   // '?'
    {
      switch (l1)
      {
      case 43:                      // '?'
        shift(43);                  // '?'
        break;
      case 28:                      // '*'
        shift(28);                  // '*'
        break;
      default:
        shift(29);                  // '+'
      }
    }
    eventHandler.endNonterminal("cp", e0);
  }

  function parse_choiceOrSeq()
  {
    eventHandler.startNonterminal("choiceOrSeq", e0);
    shift(25);                      // '('
    lookahead1(43);                 // S | Name | '('
    if (l1 == 2)                    // S
    {
      shift(2);                     // S
    }
    parse_cp();
    lookahead1(61);                 // S | ')' | ',' | '|'
    if (l1 == 2)                    // S
    {
      shift(2);                     // S
    }
    lookahead1(54);                 // ')' | ',' | '|'
    switch (l1)
    {
    case 66:                        // '|'
      for (;;)
      {
        shift(66);                  // '|'
        lookahead1(43);             // S | Name | '('
        if (l1 == 2)                // S
        {
          shift(2);                 // S
        }
        parse_cp();
        lookahead1(45);             // S | ')' | '|'
        if (l1 == 2)                // S
        {
          shift(2);                 // S
        }
        lookahead1(35);             // ')' | '|'
        if (l1 != 66)               // '|'
        {
          break;
        }
      }
      break;
    default:
      for (;;)
      {
        lookahead1(34);             // ')' | ','
        if (l1 != 30)               // ','
        {
          break;
        }
        shift(30);                  // ','
        lookahead1(43);             // S | Name | '('
        if (l1 == 2)                // S
        {
          shift(2);                 // S
        }
        parse_cp();
        lookahead1(44);             // S | ')' | ','
        if (l1 == 2)                // S
        {
          shift(2);                 // S
        }
      }
    }
    shift(26);                      // ')'
    eventHandler.endNonterminal("choiceOrSeq", e0);
  }

  function parse_Mixed()
  {
    eventHandler.startNonterminal("Mixed", e0);
    shift(25);                      // '('
    lookahead1(25);                 // S | '#PCDATA'
    if (l1 == 2)                    // S
    {
      shift(2);                     // S
    }
    lookahead1(9);                  // '#PCDATA'
    shift(20);                      // '#PCDATA'
    lookahead1(60);                 // S | ')' | ')*' | '|'
    if (l1 == 2)                    // S
    {
      shift(2);                     // S
    }
    lookahead1(53);                 // ')' | ')*' | '|'
    switch (l1)
    {
    case 26:                        // ')'
      shift(26);                    // ')'
      break;
    default:
      for (;;)
      {
        lookahead1(36);             // ')*' | '|'
        if (l1 != 66)               // '|'
        {
          break;
        }
        shift(66);                  // '|'
        lookahead1(23);             // S | Name
        if (l1 == 2)                // S
        {
          shift(2);                 // S
        }
        lookahead1(1);              // Name
        shift(3);                   // Name
        lookahead1(46);             // S | ')*' | '|'
        if (l1 == 2)                // S
        {
          shift(2);                 // S
        }
      }
      shift(27);                    // ')*'
    }
    eventHandler.endNonterminal("Mixed", e0);
  }

  function parse_AttlistDecl()
  {
    eventHandler.startNonterminal("AttlistDecl", e0);
    shift(34);                      // '<!ATTLIST'
    lookahead1(0);                  // S
    shift(2);                       // S
    lookahead1(1);                  // Name
    shift(3);                       // Name
    for (;;)
    {
      lookahead1(27);               // S | '>'
      switch (l1)
      {
      case 2:                       // S
        lookahead2(31);             // Name | '>'
        break;
      default:
        lk = l1;
      }
      if (lk != 386)                // S Name
      {
        break;
      }
      parse_AttDef();
    }
    if (l1 == 2)                    // S
    {
      shift(2);                     // S
    }
    lookahead1(16);                 // '>'
    shift(42);                      // '>'
    eventHandler.endNonterminal("AttlistDecl", e0);
  }

  function parse_AttDef()
  {
    eventHandler.startNonterminal("AttDef", e0);
    shift(2);                       // S
    lookahead1(1);                  // Name
    shift(3);                       // Name
    lookahead1(0);                  // S
    shift(2);                       // S
    parse_AttType();
    lookahead1(0);                  // S
    shift(2);                       // S
    parse_DefaultDecl();
    eventHandler.endNonterminal("AttDef", e0);
  }

  function parse_AttType()
  {
    eventHandler.startNonterminal("AttType", e0);
    lookahead1(71);                 // '(' | 'CDATA' | 'ENTITIES' | 'ENTITY' | 'ID' | 'IDREF' | 'IDREFS' | 'NMTOKEN' |
                                    // 'NMTOKENS' | 'NOTATION'
    switch (l1)
    {
    case 46:                        // 'CDATA'
      parse_StringType();
      break;
    case 25:                        // '('
    case 56:                        // 'NOTATION'
      parse_EnumeratedType();
      break;
    default:
      parse_TokenizedType();
    }
    eventHandler.endNonterminal("AttType", e0);
  }

  function parse_StringType()
  {
    eventHandler.startNonterminal("StringType", e0);
    shift(46);                      // 'CDATA'
    eventHandler.endNonterminal("StringType", e0);
  }

  function parse_TokenizedType()
  {
    eventHandler.startNonterminal("TokenizedType", e0);
    switch (l1)
    {
    case 50:                        // 'ID'
      shift(50);                    // 'ID'
      break;
    case 51:                        // 'IDREF'
      shift(51);                    // 'IDREF'
      break;
    case 52:                        // 'IDREFS'
      shift(52);                    // 'IDREFS'
      break;
    case 49:                        // 'ENTITY'
      shift(49);                    // 'ENTITY'
      break;
    case 48:                        // 'ENTITIES'
      shift(48);                    // 'ENTITIES'
      break;
    case 54:                        // 'NMTOKEN'
      shift(54);                    // 'NMTOKEN'
      break;
    default:
      shift(55);                    // 'NMTOKENS'
    }
    eventHandler.endNonterminal("TokenizedType", e0);
  }

  function parse_EnumeratedType()
  {
    eventHandler.startNonterminal("EnumeratedType", e0);
    switch (l1)
    {
    case 56:                        // 'NOTATION'
      parse_NotationType();
      break;
    default:
      parse_Enumeration();
    }
    eventHandler.endNonterminal("EnumeratedType", e0);
  }

  function parse_NotationType()
  {
    eventHandler.startNonterminal("NotationType", e0);
    shift(56);                      // 'NOTATION'
    lookahead1(0);                  // S
    shift(2);                       // S
    lookahead1(12);                 // '('
    shift(25);                      // '('
    lookahead1(23);                 // S | Name
    if (l1 == 2)                    // S
    {
      shift(2);                     // S
    }
    lookahead1(1);                  // Name
    shift(3);                       // Name
    for (;;)
    {
      lookahead1(45);               // S | ')' | '|'
      switch (l1)
      {
      case 2:                       // S
        lookahead2(35);             // ')' | '|'
        break;
      default:
        lk = l1;
      }
      if (lk != 66                  // '|'
       && lk != 8450)               // S '|'
      {
        break;
      }
      if (l1 == 2)                  // S
      {
        shift(2);                   // S
      }
      lookahead1(22);               // '|'
      shift(66);                    // '|'
      lookahead1(23);               // S | Name
      if (l1 == 2)                  // S
      {
        shift(2);                   // S
      }
      lookahead1(1);                // Name
      shift(3);                     // Name
    }
    if (l1 == 2)                    // S
    {
      shift(2);                     // S
    }
    lookahead1(13);                 // ')'
    shift(26);                      // ')'
    eventHandler.endNonterminal("NotationType", e0);
  }
